--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
     
-      TMS Therapy for Depression | Depression Treatment | Healing  Mind
+      Healing  Mind | TMS Therapy for Depression | Depression Treatment 
     
     </title>  
   
