--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Chris">
     <meta name="google-site-verification" content="LjpSeeTaZbcPMfLRrdTP6iTl8fjBdj59mkMGQqk5SDo" />
     <meta name="description" content="Welcome to Healing Mind Therapy Clinic.  We specialize in TMS therapy for treatment-resistant depression and OCD.  Antidepressants and talk therapy aren't your only option. Transcranial Magnetic Stimulation Therapy could be your next step.">
-    <meta name="keywords" content="healing mind therapy clinic, tms therapy, treatment-resistant depression, treatment-resistant ocd, transcranial magnetic stimulation therapy">
+    <meta name="keywords" content="healing mind therapy clinic, tms therapy, treatment-resistant depression, treatment-resistant ocd, transcranial magnetic stimulation therapy. depression treatment, depression treatment west hollywood, depression treatment los angeles, epression treatment west hollywood, psychiatry treatment west hollywood, psychiatry treatment los angeles">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
